2008-08-04  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Add Haskell-inspired (and related) methods:
	  - (insert)    .Insert<A>(IEnumerable<A>,A)
	  - (insertBy)  .Insert<A>(IEnumerable<A>,A,Func<A,A,int>)

2008-08-04  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Add Haskell-inspired (and related) methods:
	  - (zip)    .Zip<A,B>(IEnumerable<A>,IEnumerable<B>)
	  - (zip3)   .Zip<A,B,C>(IEnumerable<A>,IEnumerable<B>,IEnumerable<C>)
	  - (zip4)   .Zip<A,B,C,D>(IEnumerable<A>,IEnumerable<B>,IEnumerable<C>,IEnumerable<D>)
	  - (unzip)  .Unzip<A,B>(IEnumerable<Tuple<A,B>>)
	  - (unzip3) .Unzip<A,B,C>(IEnumerable<Tuple<A,B,C>>)
	  - (unzip4) .Unzip<A,B,C,D>(IEnumerable<Tuple<A,B,C,D>>)

2008-08-03  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Values() method.
	* IEnumerable.cs: Add Haskell-inspired (and related) methods:
	  - (elemIndex)   .IndexOf<S>(IEnumerable<S>, S)
	  -               .IndexOfAny<S>(IEnumerable<S>, params S[])
	  -               .IndexOfAny<S>(IEnumerable<S>, IEnumerable<S>)
	  - (elemIndices) .IndicesOf<S>(IEnumerable<S>, S)
	  -               .IndicesOfAny<S>(IEnumerable<S>, params S[])
	  -               .IndicesOfAny<S>(IEnumerable<S>, IEnumerable<S>)
	  - (findIndex)   .FindIndex<S>(IEnumerable<S>, Func<S,bool>)
	  - (findIndices) .FindIndices<S>(IEnumerable<S>, Func<S,bool>)

2008-07-29  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Predicate() method.
	* IEnumerable.cs: Add .ToTuple() from Tuple.cs; add Haskell-inspired method:
	  - (partition) .Partition<S>(IEnumerable<S>, Func<S,bool>)
	* Tuple.cs: Move TupleExtensions.ToTuple() to IEnumerableRocks.

2008-07-26  Jonathan Pryor  <jpryor@novell.com>

	* Tuple.cs: Change extension method parameters names to `self` for
	  consistency; improve parameter checking, exception types & messages.
	* Tuples.cs: Add static Tuple.MaxValues readonly field, so that external
	  code can determine the maximum number of supported Tuple values.  This is