@@ -1,5 +1,10 @@
 2008-08-04  Jonathan Pryor  <jpryor@novell.com>
 
+	* IEnumerableTest.cs: Add tests for .RemoveFirstOccurrence(),
+	  .RemoveFirstOccurrences().
+
+2008-08-04  Jonathan Pryor  <jpryor@novell.com>
+
 	* IEnumerableTest.cs: Add tests for .Insert().
 
 2008-08-04  Jonathan Pryor  <jpryor@novell.com>
