@@ -1,6 +1,12 @@
 2008-08-04  Jonathan Pryor  <jpryor@novell.com>
 
 	* IEnumerable.cs: Add Haskell-inspired (and related) methods:
+	  - (delete) .RemoveFirstOccurrence<A>(IEnumerable<A>,A)
+	  -          .RemoveFirstOccurrences<A>(IEnumerable<A>,A,int)
+
+2008-08-04  Jonathan Pryor  <jpryor@novell.com>
+
+	* IEnumerable.cs: Add Haskell-inspired (and related) methods:
 	  - (insert)    .Insert<A>(IEnumerable<A>,A)
 	  - (insertBy)  .Insert<A>(IEnumerable<A>,A,Func<A,A,int>)
 
